<resources>
    <string name="app_name">DeveemTestTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="products">Products</string>
    <string name="dollar">$</string>
    <string name="image">image</string>
    <string name="sort">Sort</string>
    <string name="price_high_to_low">Price - High to low</string>
    <string name="default_sort">Default</string>
    <string name="price_low_to_high">Price - Low to high</string>
</resources>